# job-scanner

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yaml
data/: companies.json
src/: config.rs  error.rs  lib.rs
src/adapters/: mod.rs  ollama.rs  sqlite_storage.rs  workday_client.rs
src/adapters/llm/: openrouter.rs
src/core/: model.rs  processor.rs
src/domain/: job_source.rs  llm.rs  mod.rs  storage.rs
tests/: processor.rs  round_trip.rs  storage.rs  workday_client.rs
