[package]
name = "job-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ollama-rs = "0.3.2"
schemars = "1.0.4"
pdf-extract = "0.9.0"
thiserror = "2.0.12"
async-trait = "0.1.88"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tracing-subscriber = { version = "0.3", default-features = true }
tracing = "0.1"
openrouter-rs = "0.4.5"
url = "2.5.4"
